--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/PUBLIC-METHODS/dash-force-stop.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/PUBLIC-METHODS/dash-force-stop.html
@@ -30,6 +30,8 @@
             This method is particularly useful when you need to immediately stop the dash of your character before the set distance is
             completed. For instance, if your character is dashing and gets killed, the dash action might not complete properly, causing
             your character to get stuck. In such cases, calling this function can prevent the issue by ensuring the dash is halted correctly.
+            <br><br>
+            The scenario mentioned above is already handled by the <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> class.
         </p>
         <br>
         <p>
