--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
@@ -29,6 +29,13 @@
             <p><b style="text-decoration: underline;">Required</b> Component: <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
         </p>
         <br>
+        <h2>Overview Note</h2>
+        <p>
+            All public methods are integrated and managed by the <a class="redirect-link" href="../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>.
+            These methods are generally irrelevant for users relying on the full provided asset, but they are documented in case users wish to use the <b>CharacterLedgeGrab</b>
+            class separately.
+        </p>
+        <br>
         <h2>Description</h2>
         <p>
             This class will help you manage your character Ledge <b>Grab</b> and/or Ledge <b>Climb</b> state.
@@ -45,7 +52,7 @@
         </div>
 
         <div class="table-division">
-            <span class="table-title">Public Methods</span>
+            <span class="table-title">Public Methods - Internal Integration</span>
             <table>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/enter-ledge-grab-state.html">EnterLedgeGrabState</a></td>
