--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-METHODS/entity-respawned.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-METHODS/entity-respawned.html
@@ -25,7 +25,7 @@
         <br>
         <h2>Description</h2>
         <p>
-            Resets entity health values upon respawn.
+            Resets entity health values upon respawn and triggers the <a class="redirect-link" href="../EVENTS/on-entity-alive.html">OnEntityAlive</a> event.
             <br><br>
             This method resets the health values of the entity upon respawn. It is responsible for restoring the entity's health to its default or initial state, ensuring
             that the entity begins its respawned life with a fresh health pool. This method is typically called within the respawn logic of the game to initialize the
