--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -109,7 +109,7 @@
                 </tr>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/entity-respawned.html">EntityRespawned</a></td>
-                    <td class="description">Resets entity health values upon respawn.</td>
+                    <td class="description">Resets entity health values upon respawn and triggers the <b>OnEntityAlive</b> event.</td>
                 </tr>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/start-health-regeneration.html">StartHealthRegeneration</a></td>
