--- a/2D Controller/HTML/navigation-bar.html
+++ b/2D Controller/HTML/navigation-bar.html
@@ -9,7 +9,9 @@
     <header class="nav-bar">
         <div class="navbar-links">
             <ul>
-                <li><a href="../Documentation.html" target="_top">Overview</a></li>
+                <li><a href="../Documentation.html" target="_top">Introduction</a></li>
+                <li class="arrow">➜</li>
+                <li><a href="overview.html" target="_top">Overview</a></li>
                 <li class="arrow">➜</li>
                 <li><a href="getting-started.html" target="_top">Getting Started</a></li>
                 <li class="arrow">➜</li>
