--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
@@ -29,6 +29,13 @@
             <p><b style="text-decoration: underline;">Required</b> Component: <a class="redirect-link" href="../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a></p>
         </p>
         <br>
+        <h2>Overview Note</h2>
+        <p>
+            Some public methods are integrated and managed by the <a class="redirect-link" href="../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>.
+            These methods are generally irrelevant for users relying on the full provided asset, but they are documented in case users wish to use the <b>CharacterMovement</b>
+            class separately.
+        </p>
+        <br>
         <h2>Description</h2>
         <p>
             This class manages your character's movement, seamlessly combining animation curves with Unity's <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a>
@@ -67,12 +74,26 @@
         </div>
 
         <div class="table-division">
-            <span class="table-title">Public Methods</span>
+            <span class="table-title">Public Methods - Direct Usage</span>
             <table>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/set-character-move-speed.html">SetCharacterMoveSpeed</a></td>
                     <td>Lets you change the default top speed of your character.</td>
                 </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/reset-on-ground-values.html">ResetOnGroundValues</a></td>
+                    <td>Resets all values that calculate grounded-movement to 0.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/reset-on-air-values.html">ResetOnAirValues</a></td>
+                    <td>Resets all values that calculate aerial-movement to 0.</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
+            <span class="table-title">Public Methods - Internal Integration</span>
+            <table>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/on-ground-horizontal-velocity.html">OnGroundHorizontalVelocity</a></td>
                     <td>Calculates the velocity exclusively along the X axis. Best used when the character is grounded.</td>
@@ -84,14 +105,6 @@
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/vertical-velocity.html">VerticalVelocity</a></td>
                     <td>Calculates the velocity exclusively along the Y axis. Handles your character's jump.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/reset-on-ground-values.html">ResetOnGroundValues</a></td>
-                    <td>Resets all values that calculate grounded-movement to 0.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/reset-on-air-values.html">ResetOnAirValues</a></td>
-                    <td>Resets all values that calculate aerial-movement to 0.</td>
                 </tr>
             </table>
         </div>
