--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/character-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/character-slide.html
@@ -29,6 +29,13 @@
             <p><b style="text-decoration: underline;">Required</b> Component: <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
         </p>
         <br>
+        <h2>Overview Note</h2>
+        <p>
+            All public methods are integrated and managed by the <a class="redirect-link" href="../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>.
+            These methods are generally irrelevant for users relying on the full provided asset, but they are documented in case users wish to use the <b>CharacterSlide</b>
+            class separately.
+        </p>
+        <br>
         <h2>Description</h2>
         <p>
             This class is responsible for controlling your character when they are sliding either on a <b>floor</b> or on a <b>wall</b>.
@@ -49,7 +56,7 @@
         </div>
 
         <div class="table-division">
-            <span class="table-title">Public Methods</span>
+            <span class="table-title">Public Methods - Internal Integration</span>
             <table>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/floor-slide.html">FloorSlide</a></td>
