--- a/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
@@ -25,11 +25,16 @@
             <a class="manual-or-scripting-button" href="../../MANUAL/DASH-EFFECT/dash-effect.html">SWITCH TO MANUAL</a>
         </div>
         <br>
+        <h2>Overview Note</h2>
+        <p>
+            All public methods are integrated and managed by the <a class="redirect-link" href="../../MANUAL/CHARACTER-DASH/character-dash.html">CharacterDash</a>
+            These methods are generally irrelevant for users relying on the full provided asset, but they are documented in case users wish to use the <b>DashEffect</b>
+            class separately.
+        </p>
+        <br>
         <h2>Description</h2>
         <p>
             This class is designed to manage the after-image effect of the dash mechanic within the asset.
-            <br><br>
-            <b>Note:</b> The class is utilized by the <a class="redirect-link" href="../../MANUAL/CHARACTER-DASH/character-dash.html">CharacterDash</a> class.
         </p>
         <br>
         <div class="table-division">
