--- a/2D Controller/HTML/CLASSES/MANUAL/DASH-EFFECT/dash-effect.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/DASH-EFFECT/dash-effect.html
@@ -31,6 +31,13 @@
             <br><br>
             To utilize this component effectively, simply attach it to the <b>root</b> of the game object intended to function as the after-image object of the dash.
         </p>
+        <br>
+        <h2>Note</h2>
+        <p>
+            The object with this component attached, is meant to be referenced in the <b>"AfterImageObject"</b> field of the
+            <a class="redirect-link" href="../CHARACTER-DASH/character-dash.html">CharacterDash</a> component.
+        </p>
+        <br>
         <h2>Inspector</h2>
         <img src="../../../../IMAGES/DASH-EFFECT/DashEffect.png" alt="DashEffect_Inspector">
         <br>
