--- a/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
@@ -38,7 +38,7 @@
         </p>
         <br>
         <div class="table-division">
-            <span class="table-title">Public Methods</span>
+            <span class="table-title">Public Methods - Internal Integration</span>
             <table>
                 <tr>
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/set-character-object.html">SetCharacterObject</a></td>
