--- a/2D Controller/HTML/overview.html
+++ b/2D Controller/HTML/overview.html
@@ -55,22 +55,22 @@
         <br>
         <h2>Need More Help? Contact Me</h2>
         <p>
-            If you struggle with issues, can't find your question in the FAQ section, encounter a bug, need help understanding how something within the
-            asset works, or need assistance integrating your custom code, feel free to contact me.
+            If you struggle with issues, can't find your question in the FAQ section, encounter a bug, have a request, need help understanding how something
+            within the asset works, or need assistance integrating your custom code, feel free to contact me.
         </p>
         <br>
         <p>
             You can find me here:
         </p>
         <ul>
-            <li><a class="redirect-link" href="mailto:ioanpand@outlook.com?subject=CharacterController2D%20Help">Email</a></b></li>
+            <li><a class="redirect-link" href="mailto:cocacopadev@gmail.com?subject=CharacterController2D%20Help">Email</a></b></li>
             <li><a class="redirect-link" href="https://www.instagram.com/john.pandis/" target="_blank">Instagram</a></li>
             <li><a class="redirect-link" href="https://www.facebook.com/profile.php?id=100085707504074" target="_blank">Facebook</a></li>
             <li><a class="redirect-link" href="https://www.linkedin.com/in/john-pandis/" target="_blank">LinkedIn</a></li>
             <li><a class="redirect-link" href="https://www.upwork.com/freelancers/johnpandis" target="_blank">Upwork</a></li>
         </ul>
         <p>
-            In case the e-mail link bugs out: <b>ioanpand@outlook.com</b>
+            In case the e-mail link bugs out: <b>cocacopadev@gmail.com</b>
         </p>
     </div>
 </body>
