--- a/2D Controller/HTML/navigation-bar.html
+++ b/2D Controller/HTML/navigation-bar.html
@@ -22,6 +22,8 @@
                 <li><a href="locomotion-controller.html" target="_top">Locomotion System</a></li>
                 <li class="arrow">➜</li>
                 <li><a href="combat-system.html" target="_top">Combat System</a></li>
+                <li class="arrow">➜</li>
+                <li><a href="health-system.html" target="_top">Health System</a></li>
                 <li><a href="CLASSES/classes.html" target="_top">Classes</a></li>
                 <li><a href="frequently-asked-questions.html" target="_top">FAQ</a></li>
             </ul>
