--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
@@ -62,6 +62,10 @@
             <span class="table-title">Events</span>
             <table>
                 <tr>
+                    <td class="label"><a class="events" href="EVENTS/on-attack-end.html">OnAttackEnd</a></td>
+                    <td class="description">Triggered when the current is completed.</td>
+                </tr>
+                <tr>
                     <td class="label"><a class="events" href="EVENTS/on-initiate-normal-attack.html">OnInitiateNormalAttack</a></td>
                     <td class="description">Triggered when the character initiates a normal attack.</td>
                 </tr>
