--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-attack-dealt-damage.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-attack-dealt-damage.html
@@ -21,7 +21,7 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnAttackDealtDamage</h1>
         <h2>Declaration</h2>
-        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnAttackDealtDamage</b>;</p>
+        <p>public event EventHandler&lt;<b>OnAttackDealtDamageEventArgs</b>&gt; <b>OnAttackDealtDamage</b>;</p>
         <br>
         <div class="table-division">
             <span class="table-title">Event Arguments</span>
